--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
         "start:prod": "cross-env NODE_ENV=production node dist/server.js"
     },
     "dependencies": {
-        "express": "^4.19.2",
-        "winston": "^3.12.0",
-        "dotenv": "^16.4.5",
-        "cross-env": "^7.0.3",
         "cors": "^2.8.5",
-        "zod": "^3.22.4",
-        "mongoose": "^8.2.2"
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose": "^8.2.2",
+        "winston": "^3.12.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@commitlint/cli": "^19.2.1",
+        "@commitlint/config-conventional": "^19.1.0",
+        "@types/cors": "^2.8.17",
         "@types/express": "~4.17.13",
         "@types/node": "~18.16.9",
-        "tsc-alias": "^1.8.8",
-        "tsx": "^4.7.1",
-        "typescript": "^5.3.2",
-        "@types/cors": "^2.8.17",
         "@typescript-eslint/eslint-plugin": "^7.7.0",
         "@typescript-eslint/parser": "^7.7.0",
         "eslint": "^8.57.0",
@@ -38,10 +37,11 @@
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-sonarjs": "^0.24.0",
-        "prettier": "^3.2.5",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
-        "@commitlint/cli": "^19.2.1",
-        "@commitlint/config-conventional": "^19.1.0"
+        "prettier": "^3.2.5",
+        "tsc-alias": "^1.8.8",
+        "tsx": "^4.7.1",
+        "typescript": "^5.3.2"
     }
 }
