--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.2",
         "winston": "^3.12.0",
         "zod": "^3.22.4"
@@ -25,6 +26,7 @@
         "@commitlint/config-conventional": "^19.1.0",
         "@types/cors": "^2.8.17",
         "@types/express": "~4.17.13",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "~18.16.9",
         "@typescript-eslint/eslint-plugin": "^7.7.0",
         "@typescript-eslint/parser": "^7.7.0",
