--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "start:prod": "cross-env NODE_ENV=production node dist/server.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
@@ -24,6 +25,7 @@
     "devDependencies": {
         "@commitlint/cli": "^19.2.1",
         "@commitlint/config-conventional": "^19.1.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "~4.17.13",
         "@types/jsonwebtoken": "^9.0.6",
